Use Math.clamp for cleaner percentile index calculation
Replace Math.max/Math.min combination with Math.clamp as suggested
for better code readability in RingBufferStatistics.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>